Bug #31810 Potential infinite loop with autoincrement failures in ndb
Submitted: 24 Oct 2007 11:28 Modified: 5 Nov 2007 23:11
Reporter: Kristian Nielsen
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:5.0-bk OS:Any
Assigned to: Bugs System Target Version:

[24 Oct 2007 11:28] Kristian Nielsen
Description:
Found a typo (extra semicolon, if ( ... ) ; { ... } ), which causes the
conditional to not apply.

This could potentially lead to an infinite loop in case of failure during autoincrement
computations.

This was only found by source inspection, there is no known test case. But it was
apparently encountered by some support customer.

How to repeat:
Found by source inspection.

Suggested fix:
Will commit patch.
[24 Oct 2007 11:31] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/36244

ChangeSet@1.2489, 2007-10-24 11:30:38+02:00, knielsen@ymer.(none) +1 -0
  BUG#31810: Potential infinite loop with autoincrement failures in ndb
  
  Fix extra semicolon causing if-statement to be disabled.
[25 Oct 2007 11:21] Kristian Nielsen
Pushed into mysql-5.0-ndb, mysql-5.1-new-ndb, mysql-telco-6.2, and mysql-telco-6.3.
[5 Nov 2007 14:53] Bugs System
Pushed into 6.0.4-alpha
[5 Nov 2007 14:56] Bugs System
Pushed into 5.1.23-rc
[5 Nov 2007 14:58] Bugs System
Pushed into 5.0.52
[5 Nov 2007 23:11] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in the following changelogs: 5.0.52, mysql-5.1.22-ndb-6.28,
mysql-5.1.22-ndb-6.3.6, 5.1.23, and 6.0.4. Closed.