BUG#31810: Potential infinite loop with autoincrement failures in ndb

Fix extra semicolon causing if-statement to be disabled.


sql/ha_ndbcluster.cc:
  Fix extra semicolon causing if-statement to be disabled.